syntax = "proto3";

package api.testing;

option go_package = "gitee.com/haiyux/kratos-layout/api/testing;testing";
option java_multiple_files = true;
option java_package = "api.testing";

import "google/api/annotations.proto";

service Testing {
	rpc ListTest (ListTestRequest) returns (ListTestReply) {
		option (google.api.http) = {
            get: "/test/",
        };
	};
}


message ListTestRequest {}
message ListTestReply {
	repeated Test tests = 1;
}

message Test {
	int64 id = 1;
	string name = 2;
	int64 age = 3;
}